fix for api-gateway, dodat frontend u docker compose